[package]
name = "Weave-Lunar-Launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
eframe = "0.28.1"
sysinfo = "0.30.13"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
futures-util = "0.3.30"
